--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p> Aqui você vai aprender a cozinhar comidas doces</p>
     
     
-    <img src="NEWTON1.jpg" alt="logo do Newton">
+    <img src="download.jpeg" alt="bolo de chocolate">
     <img src="NEWTON2.jpg" alt="foto do Newton"> 
     <img src="BARAO1.png" alt="logo do barão">
     <img src="BARAO2.jpg" alt="foto do Barão">
