--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     
         <li>Bolo de chocolate</li>
-        <a href="segunda.html" target="_blank">Horário de segunda-feira dia 26/02</a>
+        <a href="segunda.html" target="_blank"> Receita</a>
 
     
     <img src="pudim.jpeg" alt="bolo de chocolate">]
