--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
 
      <li>Pudim de leite condensado</li>
-        <a href="terca.html" target="_blank"
+        <a href="terca.html" target="_blank"></a>
     <img src="pudim.jpeg" alt="bolo de chocolate">
 
     
