--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
 
      <li>Pudim de leite condensado</li>
-        <a href="pudim.rec" target="_blank"></a>
+        <a href="pudim.rec" target="_blank">Receita do Pudim</a>
         <img src="pudim.jpeg" alt="pudim">
 
     
