--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <a href="quinta.h ml" target="_blank">Receita da canjica</a>
        
     <li>Torta Holandesa</li>
-    <a href="sexta.html" target="_blank">Receita da torta holandesa</a>
+    <a href="torta.rec" target="_blank">Receita da torta holandesa</a>
 
      </ol>
     <h2> PARA VER TODOS OS ARQUIVOS</h2>
