--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a href="quarta.html" target="_blank">Receita da Bomba de chocolate</a>
       
     <li>Canjica</li>
-    <a href="quinta.h ml" target="_blank">Receita da canjica</a>
+    <a href="receita" target="_blank">Receita da canjica</a>
        
     <li>Torta Holandesa</li>
     <a href="torta.rec" target="_blank">Receita da torta holandesa</a>
