--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
      
     <li>Bolo de chocolate</
-    <a href="README.md" target="_blank">receita do bolo</a>
+    <a href="README.md1" target="_blank">receita do bolo</a>
     
     <li>Pudim de leite condensado</li>
     <a href="" target="_blank">Receita do Pudim</a>
